--- a/aasted/aasted.csproj
+++ b/aasted/aasted.csproj
@@ -48,9 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AastedPriceMacro.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="LinqHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StyleTextAndPos.cs" />
     <Compile Include="WordHelper.cs" />
   </ItemGroup>
   <ItemGroup>
