--- a/aasted/App.config
+++ b/aasted/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="aasted.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <applicationSettings>
+        <aasted.Properties.Settings>
+            <setting name="TempDirName" serializeAs="String">
+                <value>Temp</value>
+            </setting>
+            <setting name="OutputDirName" serializeAs="String">
+                <value>Ready</value>
+            </setting>
+        </aasted.Properties.Settings>
+    </applicationSettings>
 </configuration>
