webbroowser control for info/error text, overwrite button, use user recent list, fixed source directory

--- a/aasted/App.config
+++ b/aasted/App.config
@@ -10,11 +10,17 @@
     </startup>
     <applicationSettings>
         <aasted.Properties.Settings>
-            <setting name="TempDirName" serializeAs="String">
+            <setting name="TempSubDirName" serializeAs="String">
                 <value>Temp</value>
             </setting>
-            <setting name="OutputDirName" serializeAs="String">
-                <value>Ready</value>
+            <setting name="DocDirName" serializeAs="String">
+                <value>C:\Users\henri\dev\haskoe\install-scripts\aasted\test</value>
+            </setting>
+            <setting name="ErrorMessageNoDocs" serializeAs="String">
+                <value>Kan ikke finde et nyt dokument i</value>
+            </setting>
+            <setting name="ErrorMessageCouldNotOpenDoc" serializeAs="String">
+                <value>Kan ikke åbne dokument eller dokument er låst</value>
             </setting>
         </aasted.Properties.Settings>
     </applicationSettings>
