--- a/aasted/Properties/Settings.settings
+++ b/aasted/Properties/Settings.settings
@@ -2,14 +2,17 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="aasted.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="DocDirectories" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="TempDirName" Type="System.String" Scope="Application">
+    <Setting Name="TempSubDirName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Temp</Value>
     </Setting>
-    <Setting Name="OutputDirName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Ready</Value>
+    <Setting Name="DocDirName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Users\henri\dev\haskoe\install-scripts\aasted\test</Value>
+    </Setting>
+    <Setting Name="ErrorMessageNoDocs" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Kan ikke finde et nyt dokument i</Value>
+    </Setting>
+    <Setting Name="ErrorMessageCouldNotOpenDoc" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Kan ikke åbne dokument eller dokument er låst</Value>
     </Setting>
   </Settings>
 </SettingsFile>
